--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -8,3 +8,12 @@ body,
     margin: 0;
     padding: 0;
 }
+
+.el-breadcrumb {
+    padding-bottom: 15px;
+    font-size: 12px;
+}
+
+.el-table {
+    margin: 15px 0;
+}
