--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -22,3 +22,19 @@ body,
 .el-pagination {
     margin-top: 15px;
 }
+
+.el-steps {
+    margin: 15px 0;
+}
+
+.el-step__title {
+    font-size: 13px;
+}
+
+
+/* 富文本编辑器的最小高度 */
+
+.ql-editor {
+    min-height: 300px;
+    /* min-width: 300px; */
+}
